Fix alignment on checkout step in german

--- a/src/targets/meandall/styles/components/reservation-steps.less
+++ b/src/targets/meandall/styles/components/reservation-steps.less
@@ -72,7 +72,7 @@
           position: absolute;
           top: 57px;
           left: 50%;
-          width: 140%;
+          width: 300%;
           -webkit-transform: translateX(-50%);
           -ms-transform: translateX(-50%);
           transform: translateX(-50%);
